[project]
name = "deltacycle"
version = "0.4.0"
description = "Delta Cycle"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-profiling>=1.8.1",
]

[project.urls]
Repository = "https://github.com/cjdrake/deltacycle.git"

[tool.black]
line-length = 100
