[project]
name = "deltacycle"
version = "0.4.0"
description = "Delta Cycle"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-profiling>=1.8.1",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
]

[project.urls]
Repository = "https://github.com/cjdrake/deltacycle.git"

[tool.black]
line-length = 100
